test/src/e2e_vm_tests/test_programs/should_fail/configurables_in_lib/src/main.sw
script;

dep lib;

use lib::*;

fn main() -> (bool, u64, b256) {
    (C0, C1, C2)
}
